# wugabot

./: .replit  README.md  Venice.ai API reference KNOWLEDGE BASE.md  google_ai_handler.py  main.js  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  storage_handler.py
attached_assets/: Pasted--data-created-1742262554-id-venice-uncensored-model-spec-pricing-input-usd-0-5--1748959330809.txt  Pasted--id-chatcmpl-35f62cf6a96c365e63cba3998271b7f3-object-chat-completion-chunk--1749699679148_1749699679148.txt  Pasted--id-chatcmpl-458534130e611d49ad6a3b727f4f73cf-object-chat-completion-created--1748402422342.txt  Pasted--id-chatcmpl-458534130e611d49ad6a3b727f4f73cf-object-chat-completion-created-1748401824-m-1748401938141.txt  Pasted--id-chatcmpl-7ffb42ab92ce3658f6d6ea1944536d8e-object-chat-completion-created-1748404532-m-1748404585662.txt  Pasted--img-src-data-image-png-base64-iVBORw0KGgoAAAANSUhEUgAAAVYAAAFWCAYAAAAyr7WDAAAAAXNSR0IArs4c6QAAAARn-1739931043638.txt  Pasted--model-default-messages-role-user--1739796534273.txt  Pasted--object-list-type-text-data-id-llama-3-3-70b-type-text-object-model-created-1739763229808.txt  Pasted--root-primary-color-2c3e50-secondary-color-3498db-error-color-e74c3c--1739761209616.txt  Pasted--title-Run-this-cell-to-set-up-Pro-Mode-pip-q-install-groq-from-typing-import-List-Dict--1754442353793_1754442353794.txt  Pasted--venice-parameters-strip-thinking-response-false-disable-thinking-false--1748403804411.txt  Pasted--venice-parameters-web-search-citations-title-Speedtest-by-Ookla-1740551135169.txt  (+21 more)
(+5 files in other folders)
