[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "flask>=3.1.0",
    "langchain-community>=0.3.18",
    "langchain>=0.3.19",
    "openai>=1.63.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "replit-object-storage>=1.0.2",
    "faiss-cpu>=1.10.0",
    "brave-search>=0.1.8",
    "requests>=2.32.3",
    "pymupdf>=1.25.3",
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "svgwrite>=1.4.3",
    "pillow>=11.1.0",
]
